Refactoring, InstumentsManager and tests draft