@@ -14,11 +14,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <disruptor.version>4.0.0</disruptor.version>
-        <jmh.version>1.37</jmh.version>
         <netty.version>4.2.0.Final</netty.version>
         <netty.boringssl.version>2.0.70.Final</netty.boringssl.version>
         <chronicle.version>2.27ea5</chronicle.version>
         <slf4j.version>2.0.17</slf4j.version>
+
+        <junit.version>5.12.2</junit.version>
+
+        <jmh.version>1.37</jmh.version>
     </properties>
 
     <dependencies>
@@ -46,6 +49,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -78,12 +88,29 @@
                 </configuration>
             </plugin>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.3</version>
+                <configuration>
+                    <argLine>
+                        --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+                        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                        --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.7.1</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>co.axelrod.websocket.client.Main</mainClass>
+                            <mainClass>co.axelrod.websocket.client.Application</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
